feat: add external identifier to ticket
